# hugging-face-agents-course-v1

./: .env.template  README.md  agent.py  pyproject.toml  test.ipynb
