[tool.poetry]
name = "final-assignment-v3"
version = "0.1.0"
description = ""
authors = ["aleixlopezpascual <aleixlopezpascual@gmail.com>"]
readme = "README.md"
packages = [{include = "final_assignment_v3"}]

[tool.poetry.dependencies]
python = "^3.10"
gradio = "*"
requests = "*"
langchain = "*"
langchain-community = "*"
langchain-core = "*"
langchain-google-genai = "*"
langchain-huggingface = "*"
langchain-groq = "*"
langchain-tavily = "*"
langchain-chroma = "*"
langgraph = "*"
huggingface_hub = "*"
supabase = "*"
arxiv = "*"
pymupdf = "*"
wikipedia = "*"
pgvector = "*"
python-dotenv = "*"
notebook = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"